2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-08-21	Joel Sherrill <joel@OARcorp.com>

	* wrapup/Makefile.am: PR217 required that the idle task be moved to
	libcpu so it could be more acutely aware of the CPU model.  This
	file was modified to pick up the idle task from there.

2002-08-21	Joel Sherrill <joel@OARcorp.com>

	* bsp_specs: Added support for -nostdlibs.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* console/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* spurious/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* start/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* startup/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* timer/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* wrapup/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-08-05	Joel Sherrill <joel@OARcorp.com>

	* Per PR260 eliminate use of make-target-options.  This impacted
	RTEMS allowing a distinction between the CPU32 and CPU32+ in the
	SuperCore and required that the m68k optimized memcpy be moved
	to libcpu.
	* wrapup/Makefile.am: Pick up memcpy.o from libcpu.

2002-07-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* start/Makefile.am: Eliminate PGM.
	Add bsplib_DATA = $(PROJECT_RELEASE)/lib/start$(LIB_VARIANT).o.

2002-07-19	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* startup/Makefile.am: Add bsplib_DATA = linkcmds.

2002-07-04	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Eliminate TMPINSTALL_FILES.
	Remove $(OBJS) from all-local.

2002-06-29	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* wrapup/Makefile.am: Remove preinstallation of libbsp.a,

2001-05-09	Joel Sherrill <joel@OARcorp.com>

	* startup/linkcmds: In support of gcc 3.1, added one of more
	of the sections .jcr, .rodata*, .data.*, .gnu.linkonce.s2.*,
	.gnu.linkonce.sb2.*, and .gnu.linkonce.s.*.  Spacing corrections